# python-jarvis

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  ROADMAP.md  TODO.md  config.yaml  main.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
core/: AGENTS.md  activation.py  audio_engine.py  automator.py  command_palette.py  command_resolver.py  config.py  controller.py  dispatcher.py  errors.py  execution_plan.py  history_db.py  job_queue.py  keyring_manager.py  llm_agent.py  logger_config.py  macro_manager.py  monitor.py  notifications.py  plugin_manager.py  prompt_guard.py  rate_limiter.py  security_ui.py  state.py  stt_engine.py  tray.py  ui.py  utils.py  worker.py
core/ai/: command_resolver.py  llm_agent.py  prompt_guard.py
core/audio/: audio_engine.py  audio_loop.py  stt_engine.py  tts_engine.py
core/cache/: __init__.py  base.py  sqlite_cache.py
core/execution/: automator.py  dispatcher.py  execution_plan.py  job_queue.py  plan_builder.py  step_executor.py  window_manager.py  worker.py
core/infra/: config.py  keyring_manager.py  logger_config.py
core/llm/: __init__.py  base.py  litellm_provider.py  models.py
core/media/: cv_matcher.py  models.py  nlp.py  resolver.py  spotify_automator.py
core/media/providers/: os_controller.py  spotify.py
core/persistence/: history_db.py
core/plugins/: macro_manager.py  plugin_manager.py
core/runtime/: monitor.py  rate_limiter.py  state.py
core/shared/: constants.py  errors.py  sqlite_base.py  utils.py  voice_responses.py
core/ui/: adapter.py  app_controller.py  command_palette.py  main_window.py  notifications.py  security_ui.py  ui.py
core/ui/legacy/: tray.py
core/ui/widgets/: status_card.py
data/: .gitkeep
data/media/: README.md  playlists.json
docs/: COMMAND_ROUTING.md
docs/architecture/: audio-stt-refactor.md  command-routing.md  llm-cache.md  llm-integration.md  ui-architecture.md
docs/skills/project-analysis-skill/: BASELINE_TEST.md  SKILL.md
docs/superpowers/plans/: 2026-04-14-llm-integration.md
docs/superpowers/specs/: 2025-05-22-job-queue-design.md  2026-05-17-hybrid-activation-design.md  2026-05-27-media-integration-design.md  2026-05-27-media-semantic-refinement.md  2026-06-05-timing-hardening-design.md  2026-06-09-llm-providers-management-design.md  2026-07-05-execution-refactor-design.md
plugins/: devtools.yaml
resources/: styles.qss
tests/: conftest.py  test_audio_engine.py  test_controller.py  test_dispatcher_explain.py  test_dispatcher_security.py  test_history_db_migration.py  test_keyring_manager.py  test_llm_agent.py  test_llm_cache.py  test_llm_security.py  test_media_models.py  test_routing.py  test_security_ui.py  test_stt_engine.py
tests/integration/: test_controller.py  test_dispatcher_explain.py  test_dispatcher_security.py  test_llm_cache.py  test_spotify.py  test_timing_hardening.py
tests/manual/: MANUAL_TEST_CHECKLIST.md
tests/smoke/: test_reliability.py
tests/unit/: test_activation.py  test_audio_engine.py  test_audio_loop.py  test_automator_helpers.py  test_command_resolver.py  test_cv_matcher.py  test_dispatcher_timing_hardening.py  test_keyring_manager.py  test_llm_agent.py  test_llm_security.py  test_logger_config.py  test_macro_manager.py  test_media_models.py  test_nlp.py  test_plan_builder.py  test_prompt_guard.py  test_rate_limiter.py  test_security_ui.py  test_state.py  test_step_executor.py  test_step_executor_timing_hardening.py  test_stt_engine.py  test_timing.py  test_tts_engine.py  test_utils.py  test_window_manager.py  test_worker.py
tools/: README.md  detect_mouse.py
