[project]
name = "python-jarvis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.4",
    "openwakeword>=0.4.0",
    "pillow>=12.2.0",
    "plyer>=2.1.0",
    "psutil>=7.2.2",
    "pyaudio>=0.2.14",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "pyperclip>=1.11.0",
    "pystray>=0.19.5",
    "python-dotenv>=1.2.2",
    "pyttsx3>=2.99",
    "pywin32>=311",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "setuptools>=82.0.1",
]
