[project]
name = "python-jarvis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faster-whisper>=1.2.1",
    "google-genai>=1.73.1",
    "keyboard>=0.13.5",
    "keyring>=25.7.0",
    "litellm>=1.84.0",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "openwakeword>=0.4.0",
    "pillow>=12.2.0",
    "plyer>=2.1.0",
    "psutil>=7.2.2",
    "pyaudio>=0.2.14",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "pyperclip>=1.11.0",
    "pyqtdarktheme>=2.1.0",
    "pyside6>=6.11.1",
    "pyside6-fluent-widgets>=1.11.2",
    "python-dotenv>=1.2.2",
    "pyttsx3>=2.99",
    "pywin32>=311",
    "pyyaml>=6.0.3",
    "setuptools>=82.0.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = []

