[project]
name = "python-jarvis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faster-whisper>=1.2.1",
    "google-genai>=1.73.1",
    "keyboard>=0.13.5",
    "keyring>=25.7.0",
    "litellm>=1.84.0",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "openwakeword>=0.4.0",
    "pillow>=12.2.0",
    "plyer>=2.1.0",
    "psutil>=7.2.2",
    "pyaudio>=0.2.14",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "pyperclip>=1.11.0",
    "pyqtdarktheme>=2.1.0",
    "pyside6>=6.11.1",
    "pyside6-fluent-widgets>=1.11.2",
    "python-dotenv>=1.2.2",
    "pyttsx3>=2.99",
    "pywin32>=311",
    "pyyaml>=6.0.3",
    "setuptools>=82.0.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
    "mypy>=1.10.0",
    "types-PyYAML>=6.0.12.20240311",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "B",   # bugbear
    "UP",  # pyupgrade
]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"

# Configuração Gradual Inicial
check_untyped_defs = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

# Ignorar validações nos testes automatizados
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# Ignorar código legado de UI
[[tool.mypy.overrides]]
module = "core.ui.legacy.*"
ignore_errors = true

# Ignorar missing imports apenas de libs específicas de terceiros sem stubs
[[tool.mypy.overrides]]
module = [
    "keyboard.*",
    "pyaudio.*",
    "pyautogui.*",
    "pygetwindow.*",
    "pyperclip.*",
    "pyttsx3.*",
    "plyer.*",
    "pyside6_fluent_widgets.*",
    "qfluentwidgets.*",
    "openwakeword.*",
    "win32gui.*",
    "win32con.*",
    "win32api.*",
    "win32process.*",
    "win32com.*",
    "win32com.client.*",
    "pythoncom.*",
    "psutil.*",
    "faster_whisper.*",
    "pystray.*"
]
ignore_missing_imports = true


